<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/firstFragment"
        android:icon="@drawable/baseline_circle_24"
        android:title="@string/first"/>

    <item
        android:id="@+id/secondFragment"
        android:icon="@drawable/baseline_hexagon_24"
        android:title="@string/second"/>

    <item
        android:id="@+id/thirdFragment"
        android:icon="@drawable/baseline_square_24"
        android:title="@string/third"/>

    <item
        android:id="@+id/fourthFragment"
        android:icon="@drawable/baseline_signal_cellular_4_bar_24"
        android:title="@string/fourth"/>

    <item
        android:id="@+id/fifthFragment"
        android:icon="@drawable/baseline_star_24"
        android:title="@string/fifth"/>

</menu>